# SimplePhongRender

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  camera.c  camera.h  core.c  core.h  main.c  model.c  model.h  requirements.txt  shader.c  shader.h  texture.c  texture.h
assets/: Cube_ColorTex.xcf  cube.blend  cube.blend1  cube.gltf  manifest.json  phong.fs.glsl  phong.vs.glsl
scripts/: asset_bundler.py
xmath/: CMakeLists.txt  color.c  color.h  mat4.c  mat4.h  transform.c  vec2.h  vec4.h
